feat: DomainIndex対応検索のプロトタイプを作成
